# circonf

./: CHANGELOG.md  README.md  choosegates.lp  circonf.lp  graphconf.lp  graphconf2.lp  graphconf3.lp  pyproject.toml
graphp/: graphp.lp  main.lp
logic/: circonf.lp  config.lp  defaults.lp  prelude.lp  semantics.lp
logic/connectives/: and.lp  atom.lp  not.lp  or.lp  twiddle.lp  xor.lp
logic/gates/: and.lp  generation.lp  not.lp  or.lp  special.lp  twiddle.lp  xor.lp
logic/generate/: assignments.lp  constraints.lp  gates.lp
proplog/: and.lp  baseRank.lp  implies.lp  kb.lp  not.lp  or.lp  out.txt  proplog.lp  test.lp  twiddle.lp  types.lp
src/: __main__.py
src/circonf/: __main__.py
src/graphconf/: __main__.py  graph.py
