[project]
name = "graphconf"
version = "0.0.1.dev0"
authors = [
  { name="Aidan Bailey", email="dev@aidanbailey.me" },
]
description = "print graph good"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aidan-bailey/graphconf"
