[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphconf"
version = "0.0.0.dev0"
authors = [
  { name="Aidan Bailey", email="dev@aidanbailey.me" },
]
maintainers = [
  { name="Aidan Bailey", email="dev@aidanbailey.me" },
]
description = "print graph good"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aidan-bailey/graphconf"

[project.optional-dependencies]
cli = []
