[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circonf"
version = "0.0.0.dev0"
authors = [
  { name="Aidan Bailey", email="dev@aidanbailey.me" },
]
maintainers = [
  { name="Aidan Bailey", email="dev@aidanbailey.me" },
]
description = "Design logical circuits"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "clingo==5.7.1",
]

[project.urls]
Homepage = "https://github.com/aidan-bailey/circonf"
Repository = "https://github.com/aidan-bailey/circonf"
